Added frontend dependency in the baked.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,6 +23,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.radyou</groupId>
+            <artifactId>frontend</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.6</version>
