--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,7 +14,7 @@
 
     <version>0-SNAPSHOT</version>
     <properties>
-        <main.basedir>${basedir}/../..</main.basedir>
+        <main.basedir>${project.parent.basedir}</main.basedir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <frontend-plugin.version>1.6</frontend-plugin.version>
         <node.version>v9.5.0</node.version>
