--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
+    "queueing-subject": "^0.2.0",
     "rxjs": "5.5.6",
+    "rxjs-websockets": "^4.0.0",
     "zone.js": "0.8.19"
   },
   "devDependencies": {
