--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+ui-src/*
 
 # dependencies
 /node_modules
@@ -40,3 +41,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Node
+node
